# rsx

./: .rustc_info.json  Cargo.toml  README.md
.github/workflows/: publish.yml
debug/.fingerprint/addr2line-988390b7ccaeb13d/: lib-addr2line  lib-addr2line.json
debug/.fingerprint/ahash-68a8855d74e33bd6/: lib-ahash  lib-ahash.json
debug/.fingerprint/ahash-6ad8992c3c3114ff/: run-build-script-build-script-build  run-build-script-build-script-build.json
debug/.fingerprint/ahash-9e2cbb27c6474875/: build-script-build-script-build  build-script-build-script-build.json
debug/.fingerprint/allocator-api2-b6247c8790082086/: lib-allocator_api2  lib-allocator_api2.json
debug/.fingerprint/ambient-authority-9b26101adddb95ae/: lib-ambient_authority  lib-ambient_authority.json
debug/.fingerprint/anstream-3369277a6df69118/: lib-anstream  lib-anstream.json
debug/.fingerprint/anstyle-291a645c44af8407/: lib-anstyle  lib-anstyle.json
debug/.fingerprint/anstyle-parse-27953a4ebddea797/: lib-anstyle_parse  lib-anstyle_parse.json
debug/.fingerprint/anstyle-query-bb07c83ec343022a/: lib-anstyle_query  lib-anstyle_query.json
debug/.fingerprint/anstyle-wincon-5abce235da8823ef/: lib-anstyle_wincon  lib-anstyle_wincon.json
debug/.fingerprint/anyhow-01ca634c01451d64/: run-build-script-build-script-build  run-build-script-build-script-build.json
debug/.fingerprint/anyhow-673bb5c34b0f389b/: lib-anyhow  lib-anyhow.json
flycheck0/: stderr  stdout
rsx/: Cargo.toml
rsx/src/: README.md  main.rs
src/: .rustc_info.json  main.rs
src/.target/: .rustc_info.json
src/flycheck0/: stderr  stdout
(+1451 files in other folders)
