[package]
name = "rsxtk"
version = "0.5.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
# Pin to 29.0.1 and use Ring to avoid CMake/NASM requirements
wasmtime = { version = "=29.0.1", default-features = false, features = ["async", "cranelift", "runtime", "component-model", "addr2line"] }
wasmtime-wasi = "=29.0.1"
toml_edit = "0.22"
wat = "1.21"
wasmprinter = "0.2"