[package]
name = "rsxtk"
version = "0.3.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
wasmtime = "40.0.1"
wasmtime-wasi = { version = "40.0.1", features = ["p1"] }
wat = "1.244.0"
wasmprinter = "0.244.0"
walrus = "0.24.4"